Bug 76635 - TABLE: Table borders not preserved after RT
Summary: TABLE: Table borders not preserved after RT
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Rajashri
URL:
Whiteboard: BSA target:4.3.0
Keywords:
: 76635tableborders (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-26 13:13 UTC by Rajashri
Modified: 2014-04-17 12:40 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
The attached file shows the exact problem area. File contains a table with borders. (53.93 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-26 13:13 UTC, Rajashri
Details
Attached file is being roundtriped on latest LO master dated 17th April 2014 , border are getting preserved (25.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-17 12:40 UTC, darshan.gandhi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-03-26 13:13:20 UTC
Created attachment 96413 [details]
The attached file shows the exact problem area. File contains a table with borders.

Problem description: 

Steps to reproduce:
1. Open the file in LO
2. Save the file as docx
3. Open the file in MS Office



Current behaviour:
The table borders are not getting preserved during Round trip.
Seems like the property is not getting imported properly.

Expected behaviour:
The table border should be imported properly and LO should be able to preserve then at the same time.

              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Rajashri 2014-03-26 13:19:17 UTC
*** Bug 76634 has been marked as a duplicate of this bug. ***
Comment 2 Rajashri 2014-04-03 05:26:05 UTC
The document crashes on the DBGUTIL build.

In the document the user has created his own custome table styles and in the created custom table style the user has set repeat first row as header.


Below is the stack trace for the crash
/*************************************************************/
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: HorizontalBorder. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: VerticalBorder. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: BottomBorder. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: CharFontName. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: LeftBorder. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: ParaBottomMargin. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: ParaLineSpacing. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: ParaTopMargin. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: RightBorder. Message: 
warn:sw.uno:21492:1:sw/source/core/unocore/unotext.cxx:2277: Exception when setting property: TopBorder. Message: 
terminate called after throwing an instance of 'com::sun::star::beans::UnknownPropertyException'
/*************************************************************/

After debugging it is found that the last exception is for 'tblHeader' property of the table.
Code reference: 
http://opengrok.libreoffice.org/xref/core/sw/source/core/unocore/unotbl.cxx#1109
Comment 3 Rajashri 2014-04-03 05:40:35 UTC
From the table properties, if we remove 'Repeat as header row at the top of each page' property for the table, then the file is not crashing.
The file opens but the tbale goes out of the grid.

NOTE: the above workaround is done on DBGUTIL buiild.
Comment 4 Commit Notification 2014-04-11 12:31:52 UTC
Rajashri committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=07f90c89ef78484a422ca4536ba587217147e80a

fdo#76635 : Table borders not preserved after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 darshan.gandhi 2014-04-17 12:38:26 UTC
Retest Passed in Latest LO master. Attached all files tables borders are getting preserved after roundtrip. there is one new issue found that is "Indent From Left =0.25 pt" was in Original and in Roundtrip file its being set "Indent From Left =0 pt", for which new bug would be filed

Version: 4.3.0.0.alpha0+
Build ID: 4211ce7c62677c65dfbbb3602be6c36fd0f98977
TinderBox: Win-x86@42, Branch:master, Time: 2014-04-17_07:49:30
Comment 6 darshan.gandhi 2014-04-17 12:40:08 UTC
Created attachment 97512 [details]
Attached file is being roundtriped on latest LO master dated 17th April 2014 , border are getting preserved
Comment 7 darshan.gandhi 2014-04-17 12:40:49 UTC
Closing this issue as this is no more reproducible on latest LO master